# llm-compass

./: .env.example  .gitignore  Dockerfile  FAST_API_design.md  IMPLEMENTATION_SUMMARY.md  README.md  added_lines.md  docker-compose.yaml  docker-database-init.sql  product_requirements.md  project_idea.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
research/: benchmark_score_ingestion_template.csv  benchmark_sites.md  benchmarks.csv  llm_metadata.py  llm_metadata_cleaned.json  llm_metadata_research_prompt.txt  llm_metadata_scraped.json  provider_metadata.csv
src/: config.py
src/agentic_core/: graph.py  prompts.py  tools.py
src/data/: database.py  models.py
src/llm_compass/: app.py  config.py
src/llm_compass/agentic_core/: graph.py  nodes.py  state.py  tools.py
src/llm_compass/api/: __init__.py  deps.py  main.py
src/llm_compass/common/: __init__.py  schemas.py  types.py
src/llm_compass/data/: database.py  embedding.py  ingestion.py  matcher.py  models.py  normalizer.py  read_source.py
src/llm_compass/scripts/: build_data.py
src/llm_compass/ui/: api_client.py  app.py  chatui.py  transformers.py
src/tests/: conftest.py
src/tests/test_core/: test_graph_flow.py  test_tools.py
src/tests/test_data/: test_ingestion.py
tests/: conftest.py
tests/test_api/: test_query.py
tests/test_core/: test_benchmark_discovery.py  test_benchmark_judgment.py  test_graph_flow.py  test_intent_validator.py  test_query_refiner.py  test_ranking.py  test_synthesis.py  test_token_ratio_estimation.py  test_tools.py
tests/test_data/: test_ingestion.py  test_matcher.py  test_models.py  test_normalizer.py
(+27 files in other folders)
