[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-compass"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Core API + UI
    "fastapi[standard]>=0.128.0,<1.0.0",
    "streamlit>=1.54.0,<2.0.0",
    
    # Data / DB
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "pgvector>=0.3.0,<1.0.0",
    
    # Schemas / settings
    "pydantic>=2.8.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # Ingestion / validation / utilities
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.0.0,<3.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "rich>=13.0.0,<15.0.0",
    
    # Orchestration
    "langgraph>=1.0.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0,<10.0.0",
]

# Optional: Add development dependencies
dev = [
    "pytest>=9.0.0,<10.0.0",
    "black>=24.0.0,<25.0.0",
    "ruff>=0.4.0,<1.0.0",
]